--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
